# OpenMSG

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: IMPLEMENTATION_CONTRACT.md  INPUT_FORMAT.md  ROADMAP.md  THEORY_MSG.md
examples/: homogeneous_3d.json  homogeneous_beam_msg_quad4.json  homogeneous_line2.json  homogeneous_plate_msg_line2.json  homogeneous_quad4.json  homogeneous_tet4.json  laminate_abd_cross_ply.json  plate_msg_vs_laminate_abd.py  square_pack_fiber.py
src/openmsg/: __init__.py  __main__.py  assembly.py  config.py  constraints.py  dehomogenize.py  homogenize.py  macro.py  materials.py  mesh.py  plate.py  solver.py  voigt.py
src/openmsg/elements/: __init__.py  common.py  hex8.py  line2.py  quad4.py  registry.py  tet4.py  tri3.py  types.py
tests/: __init__.py  mesh_builders.py  test_assembly.py  test_autograd.py  test_config.py  test_constraints.py  test_dehomogenize.py  test_elements.py  test_gmsh_square_pack.py  test_homogeneous.py  test_macro.py  test_materials.py  test_mixed_elements.py  test_plate.py  test_plate_reference_example.py  test_reduced_sg.py  test_solver.py  test_structural_msg.py  test_tensormesh_assembly.py  test_tet4.py  test_voigt.py
