[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openmsg"
version = "0.1.0"
description = "A minimal Mechanics of Structure Genome homogenization toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "meshio",
    "tensormesh-fem",
    "gmsh>=4.15.2",
]

[project.scripts]
openmsg = "openmsg.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
